# wolfcast

./: AUTHORS  COPYING  Makefile.am  README  README.md  configure.ac  mkdist
cbase/: cbase.c  cbase.h  floatint.h
cfg/: cfg.h
data/: bitmaps.txt
engine/: bitmaps.c  bitmaps.h  engine.c  engine.h  game_if.h  input.c  input.h  load_st.c  load_st.h  main.c  readlin.c  readlin.h  resource.rc.in  sounds.c  sounds.h
game/: game_if.c  gplay_st.c  gplay_st.h  raycast.c  raycast.h
gamelib/: bmp.h  bmp_draw.c  vfs.c
kernel/: kernel.c  kernel.h  kernel_snd_null.c  kernel_snd_sdl.c
